docs: Exclude login and logout routes from Swagger documentation and enable the http scheme.
