# routes/index.js
@@ -9,9 +9,13 @@ router.use('/orders', require('./orders'));
 router.use('/reviews', require('./reviews'));
 
 
-router.get('/login', passport.authenticate('github'), (req, res) => { });
+
+router.get('/login', passport.authenticate('github'), (req, res) => {
+    // #swagger.ignore = true
+});
 
 router.get('/logout', function (req, res, next) {
+    // #swagger.ignore = true
     req.logout(function (err) {
         if (err) { return next(err); }
         res.redirect('/');
